@@ -32,13 +32,5 @@ allprojects {
     test {
         useJUnitPlatform()
     }
-
-    /*tasks.withType(JavaCompile).each {
-        it.options.compilerArgs.add('--enable-preview')
-    }
-
-    test {
-        jvmArgs(['--enable-preview'])
-    }*/
 }
 
